--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\alumno\\.netbeans\\7.0\\build.properties
+user.properties.file=F:\\Documents and Settings\\Administrador\\.netbeans\\7.0\\build.properties
